--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+    <div class="mascara-form"></div>
     <div>
         <header>
             <img src="img/1705940487236.png" alt="logo-icon">
@@ -36,6 +36,14 @@
     <a href="https://wa.me/5541988178256">
         <img src="img/WhatsApp-icone.png" alt="link para o whatsapp" class="link-whatsapp">
     </a>
+
+    <form class="form-fale-conosco">
+        <input type="text" placeholder="Seu Nome">
+        <input type="text" placeholder="Seu Telefone">
+        <textarea placeholder="Digite seu problema aqui..."></textarea>
+        <button>Pedir Orçamento</button>
+
+    </form>
 
     <script src="script.js"></script>
 </body>
